@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.22 2008/08/06 21:43:55 he Exp $
+# $NetBSD: Makefile,v 1.23 2008/10/19 19:18:59 he Exp $
 
 DISTNAME=	XML-SAX-0.96
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=XML/}
 
@@ -12,6 +12,8 @@ COMMENT=	Perl interface to the SAX2 XML Parser
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
+CONFLICTS+=	p5-XML-SAX-Base-[0-9]*
 
 DEPENDS+=	p5-XML-NamespaceSupport>=0.03:../../textproc/p5-XML-NamespaceSupport
 # included in perl>=5.6.1
